Thu Nov 15 18:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/boost_filesystem.mpb:
          Added specific for windows environments, should resolve the
          compile errors with cidlc on windows

Mon Nov 14 12:06:15 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/nmake.mpd:

          Corrected a problem in the realclean target where .dll, .lib and
          .exp files would not be deleted unless pdbc or pdbl template
          variables were defined.

Mon Nov 14 09:50:38 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a bug where a project name that conflicts with a directory
          name would not get mapped in cases where the directory had
          multiple levels.

Mon Nov 14 07:40:19 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a bug where sorting the projects (with a circular
          dependency) would run infinitely.  This was identical to the
          problem fixed on Thu Apr 15 13:16:03 2004 just in a different
          scenario.

Thu Nov 10 12:23:43 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/TemplateParser.pm:

          When checking for duplicate source files in duplicate_index(),
          always use lowercase (since this is currently only used on
          Windows).

Thu Nov 10 09:01:25 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:
        * templates/bmake.mpd:
        * templates/em3.mpd:
        * templates/ghs.mpd:
        * templates/html.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/sle.mpd:
        * templates/vc6.mpd:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:
        * templates/vc8.mpd:

          Added a template variable, libname_prefix, that can be set to
          prefix all library names (sharedname, staticname and libs).  Note