@@ -1,3 +1,15 @@
+Wed Nov 16 08:30:51 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/Creator.pm:
+        * modules/ProjectCreator.pm:
+
+          Fixed a bug where adding or subtracting a value with spaces would
+          not work as expected.  When adding, the value would be split at
+          each whitespace.  When subtracting, the value would never be
+          removed.
+
+          Setting a variable with spaces worked correctly.
+
 Thu Nov 15 18:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * config/boost_filesystem.mpb:
